--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.0.4",
     "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.0.0",
